# product_heysenlyt_pi

./: .gitignore  CLAUDE.md  Dockerfile  README.md  install.sh  main.py  pubspec.yaml  pyproject.toml
lib/: heysenlyt_pi.dart
scripts/: dispensor_doctor.py  init_poll_probe.py  provision-env.sh  pump_link_diag.py  pump_motion_probe.py  senlyt_lab.py  senlyt_test_cli.py  senlyt_verify.py  valve_2ch_test.py
test/: adversarial_gate_verify_test.dart  boot_recovery_test.dart  dispatcher_integration_test.dart  dispenser_order_dto_test.dart  engine_executor_test.dart  file_idempotency_ledger_test.dart  offline_queue_test.dart  order_status_test.dart  pump_guard_test.dart  pump_sequencer_test.dart  recipe_resolver_test.dart  status_reporter_test.dart  wire_messages_test.dart
tests/: support_http.py  test_adapter_server_config_wiring.py  test_adversarial_gate_verify.py  test_app_skeleton.py  test_boot_recovery.py  test_bootstrap.py  test_command_set.py  test_commandset_dispatch.py  test_crash_resilience.py  test_daemon_boot.py  test_daemon_hardening_20260719.py  test_daemon_shutdown_valve_20260717.py  test_dispatch_terminal_20260719.py  test_dispatcher_integration.py  test_dispenser_order_dto.py  test_dispenser_session.py  test_engine_executor.py  test_file_idempotency_ledger.py  test_flavor_integrity_20260717.py  test_hardening_20260715.py  test_hardware_id_rpi5_20260717.py  test_http_client.py  test_http_status_sink_adapter.py  test_init_polled_20260722.py  test_init_ports_20260721.py  test_maintenance_reliability_20260719.py  test_obs_log.py  test_offline_queue.py  test_order_status.py  test_parallel_stage.py  test_pi_web_integration_20260717.py  test_pump_autodetect_20260717.py  test_pump_guard.py  test_pump_sequencer.py  test_recipe_resolver.py  test_registration_client.py  (+13 more)
(+80 files in other folders)
